<?xml version="1.0"?>
<package format="2">
  <name>werma_816_msgs</name>
  <version>0.0.0</version>
  <description>The werma_816_msgs package</description>

  <maintainer email="developer@lights0123.com">Ben Schattinger</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/lights0123/werma_816.git</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
  </export>
</package>
